Add frontend files and update Node dependencies
Add public frontend assets (app/*.html, components/*.js, updated style.css, and index.html) and remove legacy dashboard files. Rename package to chitter-frontend and adjust package.json dependencies; update server/server.js accordingly. Also add .DS_Store entries. These changes wire up the new static UI and align project dependencies for the updated server/frontend setup.

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,13 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# local dev conflicts
+.DS_Store
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
