--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chitter",
+  "name": "chitter-frontend",
   "version": "1.0.0",
-  "description": "a better discord alternative.",
-  "main": "index.js",
+  "description": "chitter frontend served by express",
+  "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js"
   },
@@ -13,16 +13,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/thecatthatflies/chitter/issues"
   },
   "homepage": "https://github.com/thecatthatflies/chitter#readme",
   "dependencies": {
-    "axios": "^1.13.5",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4"
   }
 }
